# hw13

./: .gitignore  README.md
django_project/: pyproject.toml  requirements.txt
django_project/notes/noteapp/: forms.py  views.py
django_project/notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
django_project/notes/noteapp/templates/noteapp/: detail.html  index.html
django_project/notes/notes/: settings.py  urls.py
django_project/notes/users/: forms.py  views.py
django_project/notes/users/migrations/: 0001_initial.py
django_project/notes/users/templates/users/: profile.html
fastapi_project/: main.py  pyproject.toml
fastapi_project/src/: schemas.py
fastapi_project/src/conf/: config.py
fastapi_project/src/database/: models.py
fastapi_project/src/repository/: notes.py  tags.py  users.py
fastapi_project/src/routes/: auth.py
fastapi_project/src/services/: auth.py
