[tool.poetry]
name = "django-example"
version = "0.1.0"
description = ""
authors = ["F1r3n25 <dimalikegtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
psycopg2 = "^2.9.9"
pillow = "^10.1.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
